# django-cafe-manager-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
cafe_manager/cafe_manager/: settings.py  urls.py
cafe_manager/orders/: admin.py  api_views.py  exceptions.py  forms.py  models.py  serializers.py  urls.py  views.py
cafe_manager/orders/migrations/: 0001_initial.py  0002_alter_dish_options_alter_order_options_and_more.py
cafe_manager/orders/status/css/: custom.css
cafe_manager/orders/templates/orders/: add_order.html  create_order.html  edit_order.html  order_list.html  revenue.html  update_status.html
cafe_manager/orders/tests/: conftest.py  test_models.py  test_views.py
cafe_manager/templates/: base.html  index.html
